--- a/bin/data/web/index.html
+++ b/bin/data/web/index.html
@@ -120,8 +120,8 @@
     setTimeout(function() {
       requestAnimationFrame(animate);
 
-      if (!bRenderPhysical)
-        updateDisplay();
+      //if (!bRenderPhysical)
+      //  updateDisplay();
       update(clock.getDelta());
       effect.render(scene, camera);
     }, 1000/fps);
@@ -167,7 +167,7 @@
       }
     }
 
-    if (bSendToPhysical ) {
+    if (bSendToPhysical) {
       msg = msg.substring(0, msg.length - 1);
       socket.send(msg);
     }
@@ -230,11 +230,11 @@
         console.log("touch");
         for (var i = 0; i < pins.length; i++) {
           pins[i] = pins[i].split(",");
-          pins[i][0] = pins[i][0] - 0;
-          pins[i][1] = pins[i][1] - 0;
-          var index = shapeDisplay.getIndex(pins[i][0], pins[i][1]);
+          var x = pins[i][0] - 0;
+          var y = pins[i][1] - 0;
+          var index = shapeDisplay.getIndex(x, y);
           shapeDisplay.shadowPins.push(index);
-          console.log(shapeDisplay.shadowPins);
+          //console.log(shapeDisplay.shadowPins);
         }
       }
 
@@ -242,12 +242,12 @@
         //console.log("shadow");
         for (var i = 0; i < pins.length; i++) {
           pins[i] = pins[i].split(",");
-          pins[i][0] = pins[i][0] - 0;
-          pins[i][1] = pins[i][1] - 0;
-          pins[i][2] = pins[i][2] - 0;
+          var x = pins[i][0] - 0;
+          var y = pins[i][1] - 0;
+          var h = pins[i][2] - 0;
 
           // set the dark ones based on hand shadow
-          var index = shapeDisplay.getIndex(pins[i][0], pins[i][1]);
+          var index = shapeDisplay.getIndex(x, y);
 
           if (shapeDisplay.shadowPins.indexOf(index) > 0)
           //if ((pins[i][2] > 0) || shapeDisplay.shadowPins.indexOf(index) > 0)
@@ -262,12 +262,19 @@
         //console.log("heights");
         for (var i = 0; i < pins.length; i++) {
           pins[i] = pins[i].split(",");
-          pins[i][0] = pins[i][0] - 0;
-          pins[i][1] = pins[i][1] - 0;
-          pins[i][2] = pins[i][2] - 0;
+          var x = pins[i][0] - 0;
+          var y = pins[i][1] - 0;
+          var h = pins[i][2] - 0;
 
           // set heights from physical display
-          shapeDisplay.setPinHeight(pins[i][0], pins[i][1], pins[i][2]/255*4 -4);
+
+            var oldHeight = shapeDisplay.getLastPinHeight(x, y);
+            var diff = Math.abs(h - oldHeight);
+
+          if (!isNaN(h) && (diff > 3)) {
+            shapeDisplay.setPinHeight(x, y, h/255*4 -4);
+          }
+          shapeDisplay.setLastPinHeight(x, y, h);
         }
       }
   }
